--- a/resources/views/Page/_booking.html.twig
+++ b/resources/views/Page/_booking.html.twig
@@ -1,7 +1,8 @@
 First name: {{ form.first_name }}
 Last name: {{ form.last_name }}
 Country: {{ form.country }}
-Phone: {{ form.phone }}
+Day time phone: {{ form.phone }}
+Evening phone: {{ form.phone2 }}
 Email: {{ form.email }}
 Tour: {{ form.tour }}
 Guide: {{ form.guide }}
