--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -51,10 +51,19 @@
 
                         <div class="form_col_1" style="margin-right: 30px;">
                             <div class="row alignleft field_text">
-                                <label class="label_title">Phone:</label>
+                                <label class="label_title">Day time phone:</label>
                                 {{ form_widget(form.phone, { 'attr': {'class': 'inputField required', 'placeholder':'Your Phone - Required'} }) }}
                             </div>
                         </div>
+
+                        <div class="form_col_1">
+
+                            <div class="row alignleft field_text omega">
+                                <label class="label_title">Evening phone:</label>
+                                {{ form_widget(form.phone2, { 'attr': {'class': 'inputField required', 'placeholder':'Your Phone - Required'} }) }}
+                            </div>
+                        </div>
+
 
                         <div class="form_col_2">
                             <div class="row">
