--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -24,6 +24,7 @@
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'nomadic-experience'}) }}"><span>Nomadic experience</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-visa'}) }}"><span>Mongolian visa</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'travel-accommodations'}) }}"><span>Travel accommodations</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}"><span>Trip calendar 2015</span></a></li>
                     </ul>
                 </li>
                 <li class="menu-level-0 mega-nav"><a href="#"><span>TOURS</span></a>
@@ -97,7 +98,9 @@
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'why-travel-with-us'}) }}"><span>Why Travel With Us</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'experience-luxury-in-mongolia'}) }}"><span>Experience luxury in Mongolia</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('catalog') }}"><span>Request a brochure</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('contact') }}"><span>Contact us</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}"><span>Trip calendar 2015</span></a></li>
                     </ul>
                 </li>
             </ul>
