--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -173,7 +173,7 @@
             </div>
 
             <div class="footer_contacts">
-                <span class="phone">Call us: 976-99000601</span>
+                <span class="phone">Call us: 863-273-3527</span>
                 <span class="email">Email: info@travelallmongolia.com</span>
             </div>
 
