--- a/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
@@ -238,6 +238,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3345</span>
                         <br/>
+                        <span>$3645 after December 10</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$590</span>
                         <br/>
                     </div>
@@ -278,7 +280,7 @@
                     <div class="widget-container widget_login">
                         <h2>Quick inquiry</h2>
 
-                        <form method="post" action="{{ path('inquiry_send', {'slug':slug}) }}" class="loginform">
+                        <form method="post" action="{{ path('inquiry_send', {'slug':slug}) }}" class="loginform" novalidate>
 
                             {% for message in app.session.getFlashBag.get('inquiry') %}
                                 <mark style="padding: 10px;display: block;"> {{ message }}</mark>
