--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -217,6 +217,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3295</span>
                         <br/>
+                        <span>$3595 after December 10</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
                     </div>
@@ -244,7 +246,7 @@
                     <div class="widget-container widget_login">
                         <h2>Quick inquiry</h2>
 
-                        <form method="post" action="{{ path('inquiry_send', {'slug':slug}) }}" class="loginform">
+                        <form method="post" action="{{ path('inquiry_send', {'slug':slug}) }}" class="loginform" novalidate>
 
                             {% for message in app.session.getFlashBag.get('inquiry') %}
                                 <mark style="padding: 10px;display: block;"> {{ message }}</mark>
