--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -719,12 +719,37 @@
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
-            </tr>            
+            </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">Eagle Festival & Gobi Desert</a></p>
+                </td>
+                <td>
+                    <p>25<sup>th</sup> of September, 2015</p>
+                </td>
+                <td>
+                    <p>6<sup>th</sup> of October, 2015</p>
+                </td>
+                <td>
+                    <p>15 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
 
-{#
 <h2>October</h2>
 <div class="styled_table">
         <table>
@@ -762,13 +787,13 @@
                     <p>1</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}">Luxury tour with Naadam Festival</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">Golden Eagle Festival</a></p>
                 </td>
                 <td>
-                    <p>2<sup>nd</sup> of July, 2015</p>
+                    <p>30<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>13<sup>th</sup> of July, 2015</p>
+                    <p>6<sup>th</sup> of October, 2015</p>
                 </td>
                 <td>
                     <p>10 persons</p>
@@ -780,10 +805,9 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             </tbody>
         </table>
 </div>
-#}
