--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -236,7 +236,7 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3585</span>
                         <br/>
-                        <span>$3885 after December 10</span>
+                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 20, 2014</span>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$680</span>
                         <br/>
