--- a/resources/views/Tour/naadam_festival_journey.html.twig
+++ b/resources/views/Tour/naadam_festival_journey.html.twig
@@ -204,6 +204,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$6450 for per person </span>
                         <br/>
+                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 20, 2014</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$1750 </span>
                         <br/>
                     </div>
