--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -217,7 +217,7 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3295</span>
                         <br/>
-                        <span>$3595 after December 10</span>
+                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 20, 2014</span>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
