--- a/resources/views/Tour/buddhism-tour.html.twig
+++ b/resources/views/Tour/buddhism-tour.html.twig
@@ -234,6 +234,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3350 for 2-5 PAX</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 20, 2014</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
                     </div>
