--- a/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
+++ b/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
@@ -213,6 +213,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3395</span>
                         <br/>
+                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 20, 2014</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$660</span>
                         <br/>
                     </div>
