--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -44,7 +44,7 @@
                     <p>28<sup>th</sup> of May, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -70,7 +70,7 @@
                     <p>20<sup>th</sup> of May, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -132,7 +132,7 @@
                     <p>13<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -158,7 +158,7 @@
                     <p>28<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -184,7 +184,7 @@
                     <p>19<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -246,7 +246,7 @@
                     <p>23<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -272,7 +272,7 @@
                     <p>13<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -298,7 +298,7 @@
                     <p>29<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -324,7 +324,7 @@
                     <p>7<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -350,7 +350,7 @@
                     <p>13<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -376,7 +376,7 @@
                     <p>20<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -402,7 +402,7 @@
                     <p>26<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -428,7 +428,7 @@
                     <p>29<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -454,7 +454,7 @@
                     <p>13<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>10 persons</p>
+                    <p>8 - 12 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -516,7 +516,7 @@
                     <p>7<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -542,7 +542,7 @@
                     <p>29<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -568,7 +568,7 @@
                     <p>23<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -594,7 +594,7 @@
                     <p>15<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -656,7 +656,7 @@
                     <p>10<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -682,7 +682,7 @@
                     <p>23<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -708,7 +708,7 @@
                     <p>14<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -734,7 +734,7 @@
                     <p>6<sup>th</sup> of October, 2015</p>
                 </td>
                 <td>
-                    <p>15 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -796,7 +796,7 @@
                     <p>6<sup>th</sup> of October, 2015</p>
                 </td>
                 <td>
-                    <p>10 persons</p>
+                    <p>16 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
