--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -135,7 +135,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>6 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
@@ -249,7 +249,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>4 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
@@ -275,7 +275,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>6 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
