--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -353,7 +353,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>7 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
@@ -379,7 +379,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>5 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
@@ -457,7 +457,7 @@
                     <p>8 - 12 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>6 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
