--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -5,7 +5,7 @@
 
     <address>
         <b><i class="icon-envelope-alt"></i> E-Mail:</b> <a href="mailto:info@travelallmongolia.com">info@travelallmongolia.com</a><br>
-        <b>Skype:</b> soyoloo_mongolianluxurytours
+        {#<b>Skype:</b> soyoloo_mongolianluxurytours#}
     </address>
 
     <address>
