--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -47,7 +47,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>8 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
@@ -161,7 +161,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>Available</p>
+                    <p>9 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
