--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -82,6 +82,32 @@
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'treasures-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>3</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of May, 2015</p>
+                </td>
+                <td>
+                    <p>24<sup>th</sup> of May, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'unparalleled-luxury-tour' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -195,7 +221,33 @@
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
-            </tr> 
+            </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of June, 2015</p>
+                </td>
+                <td>
+                    <p>24<sup>th</sup> of June, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'unparalleled-luxury-tour' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -466,6 +518,32 @@
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>29<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'unparalleled-luxury-tour' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -605,7 +683,33 @@
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'treasures-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
-            </tr>            
+            </tr>
+            <tr>
+                <td>
+                    <p>5</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'unparalleled-luxury-tour' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
