--- a/resources/views/_footer.html.twig
+++ b/resources/views/_footer.html.twig
@@ -65,7 +65,7 @@
                 </div>
                 <div class="hours">
                     E-Mail: info@travelallmongolia.com<br>
-                    Skype: soyoloo_mongolianluxurytours
+                    {#Skype: soyoloo_mongolianluxurytours#}
                 </div>
                 <a href="{{ path('contact') }}" class="notice">Send us message</a>
             </div>
