--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -155,7 +155,7 @@
                     </div>
                     <div class="hours">
                         E-Mail: info@travelallmongolia.com<br>
-                        Skype: soyoloo_mongolianluxurytours
+                        {#Skype: soyoloo_mongolianluxurytours#}
                     </div>
                     <h3 style="margin-top: 10px">OFFICE IN UNITED STATES:</h3>
                     <div class="address">
