--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -1,6 +1,13 @@
 
 <div class="frame_quote"><blockquote>
     <p>
+        <em>I’ve been meaning to write to you and thank you for the wonderful trip to your magnificent country.  Every time we turned a corner there was something new and different to experience.  Serjee was a wonderful guide, we enjoyed very much being with her.  She obviously loves Mongolia and was willing to share so much of herself (and her family) with us.  Visiting with her parents in their home was certainly a highlight.  The drivers were the best.  We all felt very safe with them thru the mountains, rivers, whatever.  They participated in activities with us.  And even though they didn’t speak English we all communicated.  Everything else was great.  This was one of the best trips I have ever taken.  Thank you for offering it to us so we could see your wonderful country first hand.</em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Sandra Bremer, USA</strong></span></p>
+</blockquote>
+</div>
+<div class="frame_quote"><blockquote>
+    <p>
         <em>It is truly an experience, to be with the family. Very impressed with what the desert had to offer. The kids were always up for the adventures planned for us. We were always surrounded by nice people, good food and AMAZING scenery. Quite a family destination. From this experience makes us want to come back Mongolia, again and again and again. </em></p>
     <p>
         <span style="color:#8b4513;"><strong>Adam Singer family, USA</strong></span></p>
