--- a/resources/views/Content/sitemap.html
+++ b/resources/views/Content/sitemap.html
@@ -7,16 +7,12 @@
                 <li>
                     <a href="javascript:;">Tours</a>
                     <ul>
-                        <li><a href="{{ path('tour_show', {'slug':'a-classic-journey-of-mongolia'}) }}">A Classic Journey Of Mongolia</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'highlights-of-mongolia'}) }}">Highlights of Mongolia</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'naadam-festival-journey'}) }}">Naadam Festival Journey</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'gobi-and-beyond'}) }}">Gobi & Beyond</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'karakorum-and-khuvsgul-lake-adventure'}) }}">Karakorum & Khuvsgul Lake Adventure</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'splendors-of-mongolia'}) }}">Splendors of Mongolia</a></li>
-                        <li><a href="{{ path('tour_show', {'slug':'bird-watching-trip'}) }}">Bird Watching Trip</a></li>
+                        {% for slug, tour in app.content_tours.tours %}
+                        <li><a href="{{ path('tour_show', {'slug':slug}) }}">{{ tour.name }}</a></li>
+                        {% endfor %}
                     </ul>
                 </li>
-                <li><a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}">Trip Calendar</a></li>
+                <li><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}">Trip Calendar</a></li>
                 <li><a href="{{ path('page_show', {'slug':'about-mongolia'}) }}">About Mongolia</a>
                     <ul>
                         <li><a href="{{ path('page_show', {'slug':'nomadic-experience'}) }}">Nomadic experience</a></li>
@@ -30,7 +26,9 @@
                     <ul>
                         <li><a href="{{ path('page_show', {'slug':'why-travel-with-us'}) }}">Why Travel With Us</a></li>
                         <li><a href="{{ path('page_show', {'slug':'experience-luxury-in-mongolia'}) }}">Experience luxury in Mongolia</a></li>
+                        <li><a href="{{ path('page_show', {'slug':'testimonials'}) }}">Testimonials</a></li>
                         <li><a href="{{ path('contact') }}">Contact us</a></li>
+                        <li><a href="{{ path('page_show', {'slug':'trip-calendar-2015'}) }}">Trip Calendar</a></li>
                     </ul>
                 </li>
                 <li><a href="{{ path('page_show', {'slug':'terms-and-conditions'}) }}"><span>Terms & Conditions</span></a></li>
@@ -44,15 +42,15 @@
     <div class="sidebar" style="width: 300px;">
         <div class="box">
             {{ include('Page/_quick_contact.html.twig') }}
-            <!-- subscribe buttons -->
+
             <div class="widget-container subscribe_btn">
-                <mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
-                <br/>
+                <!--<mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
+                <br/>-->
                 <div>
                     <a href="{{ path('page_show', {'slug':'trip-calendar-2014'}) }}"><img src="/images/group_travel_2014.jpg" alt="Join our group travel 2014"/></a>
                 </div>
             </div>
-            <!--/ subscribe buttons -->
+
 
         </div>
 
