--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -193,8 +193,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$1865 for 2-5 PAX</span>
                         <br/>
-                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>
+                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
                         <br/>
                     </div>
