--- a/resources/views/Tour/discover-central-mongolia.html.twig
+++ b/resources/views/Tour/discover-central-mongolia.html.twig
@@ -188,8 +188,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2850</span>
                         <br/>
-                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>
+                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
                     </div>
