--- a/resources/views/Tour/golden-eagle-festival.html.twig
+++ b/resources/views/Tour/golden-eagle-festival.html.twig
@@ -168,8 +168,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2395</span>
                         <br/>
-                        <span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>
+                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
                     </div>
