--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -191,7 +191,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span style="text-decoration: line-through">$1865</span><span>$1485 for 2-5 PAX</span>
+                        <b style="color: #B28E1B">Price:</b> <span style="color: #949494; text-decoration: line-through">$1865</span><span>$1485 for 2-5 PAX</span>
                         <br/>
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
                         <br/>#}
