--- a/resources/views/Tour/unparalleled-luxury-tour.html.twig
+++ b/resources/views/Tour/unparalleled-luxury-tour.html.twig
@@ -209,6 +209,8 @@
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>1250 $</span>
                         <br/>
+                        <b style="color: #B28E1B">Group size:</b> <span>8 - 12</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
