--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -96,7 +96,7 @@
                     <p>24<sup>th</sup> of May, 2015</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>8 - 12 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -236,7 +236,7 @@
                     <p>24<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>8 - 12 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -532,7 +532,7 @@
                     <p>29<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>8 - 12 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -698,7 +698,7 @@
                     <p>19<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>8 - 12 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
