--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -12,7 +12,7 @@
     {# Mobile Specific Metas #}
     <meta name="viewport" content="width=device-width,initial-scale=1">
     {# CSS #}
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     {% block stylesheets %}
         <link href='http://fonts.googleapis.com/css?family=Cabin:400,400italic,500,600,700|PT+Serif+Caption:400,400italic' rel='stylesheet' type='text/css'>
 
