--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -614,6 +614,58 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
+                    <p>2<sup>nd</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>3</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>28<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                </td>
+                <td>
                     <p>16<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
@@ -634,7 +686,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>3</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
@@ -660,7 +712,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>4</p>
+                    <p>6</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">Treasures of Mongolia</a></p>
@@ -686,7 +738,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>5</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
