--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -251,14 +251,14 @@
                     <!--/ widget_categories -->
 
                     <!-- widget_recent_comments -->
-                    {# <div class="widget-container widget_popular">
+                    <div class="widget-container widget_popular">
                         <h3 class="widget-title">Highlights</h3>
                         <ul>
                             {% for highlight in tour.highlights %}
                             <li><a href="javascript:;">{{ highlight }}</a></li>
                             {% endfor %}
                         </ul>
-                    </div> #}
+                    </div>
                     <!--/ widget_recent_comments -->
 
                     <!-- widget_recent_comments -->
