--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -261,14 +261,7 @@
                     </div>
                     <!--/ widget_recent_comments -->
 
-                    <!-- widget_recent_comments -->
-                    <div class="widget-container widget_popular">
-                        <h3 class="widget-title">Discount</h3>
-                        <strong>Discount for tour leader:</strong>
-                        <br/>&nbsp;&nbsp;100% 	by 15 and more!
-
-                    </div>
-                    <!--/ widget_recent_comments -->
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- login widget -->
                     <div class="widget-container widget_login">
