--- a/resources/views/Tour/gobi_desert_tour.html.twig
+++ b/resources/views/Tour/gobi_desert_tour.html.twig
@@ -216,6 +216,7 @@
                     </div>
                     <!--/ widget_recent_comments -->
 
+                    {{ include('Tour/_discount.html.twig') }}
                     <!-- subscribe buttons -->
                     <div class="widget-container subscribe_btn">
                         <div>
