--- a/resources/views/Tour/karakorum_khuvsgul.html.twig
+++ b/resources/views/Tour/karakorum_khuvsgul.html.twig
@@ -198,6 +198,7 @@
                     </div>
                     <!--/ widget_recent_comments -->
 
+                    {{ include('Tour/_discount.html.twig') }}
                     <!-- login widget -->
                     <div class="widget-container widget_login">
                         <h2>Quick inquiry</h2>
