--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -217,6 +217,7 @@
                         </ul>
                     </div>
                     <!--/ widget_recent_comments -->
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- subscribe buttons -->
                     <div class="widget-container subscribe_btn">
