--- a/resources/views/Tour/mountain-bike-tour.html.twig
+++ b/resources/views/Tour/mountain-bike-tour.html.twig
@@ -250,6 +250,7 @@
                         </ul>
                     </div>
                     <!--/ widget_recent_comments -->
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- login widget -->
                     <div class="widget-container widget_login">
