--- a/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
+++ b/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
@@ -238,15 +238,7 @@
                     </div>
                     <!--/ widget_recent_comments -->
 
-                    <div class="widget-container widget_popular">
-                        <h3 class="widget-title">Discount</h3>
-                        <strong>Discount for children:</strong>
-                        <br/>&nbsp;&nbsp;70% for children 0-5 years old
-                        <br/>&nbsp;&nbsp;25% for children 5-12 years old
-
-                        <br/><strong>Discount for tour leader:</strong>
-                        <br/>&nbsp;&nbsp;100% 	by 15 and more!
-                    </div>
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- login widget -->
                     <div class="widget-container widget_login">
