--- a/resources/views/Tour/motor-bike-tour.html.twig
+++ b/resources/views/Tour/motor-bike-tour.html.twig
@@ -221,6 +221,7 @@
                         </ul>
                     </div>
                     <!--/ widget_recent_comments -->
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- login widget -->
                     <div class="widget-container widget_login">
