--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -232,6 +232,7 @@
                         </ul>
                     </div>
                     <!--/ widget_recent_comments -->
+                    {{ include('Tour/_discount.html.twig') }}
 
                     <!-- login widget -->
                     <div class="widget-container widget_login">
